# interval-exchange-transformations

./: Cargo.toml  README.md
src/: lib.rs  rauzy_cocycle.rs
src/flipped_permutations/: mod.rs  test.rs
