[package]
name = "interval-exchange-transformations"
version = "0.1.0"
authors = ["Sayantan Khan <sayantangkhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rug = "1.12"

[dependencies.gmp-mpfr-sys]
version = "1.4"
default-features = false
features = []